project('Voltage table',
     'vala',
    version: '1.0.0',
    meson_version : '>= 0.46.0',
     )
# comment Wed 01 Feb 2023 23:17:39 
dependencies = [
    dependency('glib-2.0'),
    dependency('gobject-2.0'),
]

sources = files('voltage2.vala')

executable('voltage2', sources, dependencies: dependencies)

#subdir('data')
#subdir('src')
#subdir('po')

